--- a/source/_posts/算法-数据结构-并查集.md
+++ b/source/_posts/算法-数据结构-并查集.md
@@ -1,8 +1,33 @@
 ---
 title: 算法&数据结构 并查集
 date: 2022-09-15 21:40:34
-tags: 数据结构 并查集
+tags: 
+ - 数据结构 
+ - 并查集
+categories: 算法&数据结构
 ---
 
 ```c++
+class UFS {
+public:
+    vector<int> father;
+
+    int findFather(int i) {
+        if (i == father[i]) {
+            return i;
+        } else {
+            f = findFather(father[i]);
+            father[i] = f;
+            return f;
+        }
+    }
+
+    void unionij(int i, int j) {
+        int fi = findFather(i);
+        int fj = findFather(j);
+        if (fi != fj) {
+            father[fi] = fj;
+        }
+    }
+}
 ```
